# mcp-server-make

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: custom_makefiles.md  index.md  user_guide.md
src/mcp_server_make/: __init__.py  __main__.py  exceptions.py  execution.py  handlers.py  make.py  security.py  server.py
tests/: __init__.py  conftest.py  test_make_interface.py  test_server.py
