[project]
name = "mcp-server-make"
version = "0.1.5"
description = "MCP Server for GNU Make"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["mcp", "make", "build", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.1.2",
    "pydantic>=2.10.0",
]

[[project.authors]]
name = "Joshua M. Dotson"
email = "contact@jmdots.com"

[project.urls]
Homepage = "https://github.com/modelcontextprotocol/mcp-server-make"
Documentation = "https://github.com/modelcontextprotocol/mcp-server-make#readme"
Repository = "https://github.com/modelcontextprotocol/mcp-server-make.git"
Changelog = "https://github.com/modelcontextprotocol/mcp-server-make/blob/main/CHANGELOG.md"

[project.scripts]
mcp-server-make = "mcp_server_make:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_make"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
]