[project]
name = "mcp-server-make"
version = "0.1.8"
description = "A Model Context Protocol server providing access to make functionality"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Joshua M. Dotson", email = "contact@jmdots.com" }]
maintainers = [{ name = "Joshua M. Dotson", email = "contact@jmdots.com" }]
keywords = ["make", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.389",
    "ruff>=0.7.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0"
]

[project.scripts]
mcp-server-make = "mcp_server_make:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"